--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 MISTRAL_API_KEY=oKdjCl98ACUqpUc4TCyqcfZFMzNNdapl
 
 # MISTRAL_API_KEY=eSJAKuw8DOM9jgiIpY67fJ10MIZ1Dmfi
+
+GROQ_API_KEY=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
+
+#DEEPSEEK_API_KEY=sk-271cd4f705864250b320236bc8d2920d
