Latest Commit II

--- a/.env
+++ b/.env
@@ -6,5 +6,9 @@ MISTRAL_API_KEY=eSJAKuw8DOM9jgiIpY67fJ10MIZ1Dmfi
 
 #DEEPSEEK_API_KEY=sk-271cd4f705864250b320236bc8d2920d
 
+# Google OAuth2 Configuration
+GOOGLE_OAUTH_CLIENT_ID=322433970526-h84tkhv1bedivbghsvnh8k9s8g6du5cg.apps.googleusercontent.com
+GOOGLE_OAUTH_CLIENT_SECRET=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
+
 
 
